add fix to unblock customers that have devices with data matrices that contain printing errors

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -23,6 +23,7 @@
 "MeshSetup.Action.DontLeaveNetwork" = "Cancel Setup";
 "MeshSetup.Action.CancelSetup" = "Cancel";
 "MeshSetup.Action.ContinueSetup" = "Don't Cancel";
+"MeshSetup.Action.ContactSupport" = "Contact Support";
 
 
 
