--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -47,23 +47,27 @@
 
 
 "MeshSetup.GetReady.Button" = "Next";
-"MeshSetup.GetReady.Title" = "Get your {{device}} ready for setup";
-"MeshSetup.GetReady.Text1" = "Plug your {{device}} into a power source";
-"MeshSetup.GetReady.Text2" = "Confirm your {{device}} is blinking blue";
-"MeshSetup.GetReady.Text3" = "";
-"MeshSetup.GetReady.Text4" = "";
 
+"MeshSetup.GetReady.Title" = "Get your {{device}} ready for setup";
 "MeshSetup.GetReady.EthernetTitle" = "Attach your Ethernet Featherwing";
-"MeshSetup.GetReady.EthernetText1" = "Line up {{device}} pin headers and gently push the {{device}} into the Featherwing until flush";
-"MeshSetup.GetReady.EthernetText2" = "Insert an ethernet cable into the port";
-"MeshSetup.GetReady.EthernetText3" = "Plug your {{device}} into a power source";
-"MeshSetup.GetReady.EthernetText4" = "Confirm your {{device}} is blinking blue";
 
 "MeshSetup.GetReady.EthernetToggleTitle" = "USE WITH ETHERNET?";
 "MeshSetup.GetReady.EthernetToggleText" = "Toggle ethernet featherwing setup";
 
 "MeshSetup.GetReady.WifiCheckboxText" = "I have attached the Wi-Fi antenna and see that the device is blinking blue";
 "MeshSetup.GetReady.CellularCheckboxText" = "I have attached the cellular antenna and see that the device is blinking blue";
+
+
+"MeshSetup.GetReady.SOMTitle" = "Get your {{device}} ready for setup";
+"MeshSetup.GetReady.SOMEthernetTitle" = "Get your {{device}} ready for setup";
+
+"MeshSetup.GetReady.SOMEthernetToggleTitle" = "USE WITH ETHERNET?";
+"MeshSetup.GetReady.SOMEthernetToggleText" = "Toggle ethernet setup";
+
+"MeshSetup.GetReady.SOMWifiCheckboxText" = "I have attached the Wi-Fi and bluetooth antennas and see that the device is blinking blue";
+"MeshSetup.GetReady.SOMCellularCheckboxText" = "I have attached the cellular and bluetooth antennas and see that the device is blinking blue";
+
+
 
 
 "MeshSetup.GetCommissionerReady.Title" = "Add {{device}} to {{network}} mesh network";
