--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -58,10 +58,14 @@
 "MeshSetup.ControlPanel.Documentation.Title" = "Documentation";
 
 "MeshSetup.ControlPanel.PrepareForPairing.Title" = "Prepare For Pairing";
-"MeshSetup.ControlPanel.PrepareForPairing.Text" = "To proceed app needs to pair to your device. Please put {0} into listening mode.";
+"MeshSetup.ControlPanel.PrepareForPairing.Text" = "To proceed app needs to pair to your device. Please put {{deviceName}} into listening mode.";
 "MeshSetup.ControlPanel.PrepareForPairing.Signal" = "Signal";
 "MeshSetup.ControlPanel.PrepareForPairing.SignalWarning" = "Singal only works for devices breathing cyan";
 
+
+
+"MeshSetup.ControlPanel.FlowComplete.AddNewWifi.Title" = "Success";
+"MeshSetup.ControlPanel.FlowComplete.AddNewWifi.Text" = "Wi-Fi credentials were successfully added to {{deviceName}}";
 
 
 "MeshSetup.SelectDevice.Title" = "Choose the device you’re setting up";
