--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -50,10 +50,22 @@
 "MeshSetup.ControlPanel.Wifi.AddNewWifi" = "Connect to new Wi-Fi";
 "MeshSetup.ControlPanel.Wifi.ManageWifi" = "Manage Wi-Fi";
 
-
 "MeshSetup.ControlPanel.Cellular.Title" = "Cellular";
 "MeshSetup.ControlPanel.Cellular.ActivateSim" = "Activate SIM";
 "MeshSetup.ControlPanel.Cellular.DeactivateSim" = "Deactivate SIM";
+
+
+"MeshSetup.ControlPanel.Ethernet.Title" = "Ethernet";
+"MeshSetup.ControlPanel.Ethernet.ActivateEthernet" = "Activate ethernet pins";
+"MeshSetup.ControlPanel.Ethernet.DeactivateEthernet" = "Deactivate ethernet pins";
+
+"MeshSetup.ControlPanel.Mesh.Title" = "Mesh";
+"MeshSetup.ControlPanel.Mesh.JoinNetwork" = "Join network";
+"MeshSetup.ControlPanel.Mesh.CreateNetwork" = "Create network";
+"MeshSetup.ControlPanel.Mesh.LeaveNetwork" = "Leave network";
+"MeshSetup.ControlPanel.Mesh.PromoteToGateway" = "Promote to gateway";
+"MeshSetup.ControlPanel.Mesh.DemoteFromGateway" = "Demote from gateway";
+
 
 "MeshSetup.ControlPanel.Documentation.Title" = "Documentation";
 
@@ -63,9 +75,13 @@
 "MeshSetup.ControlPanel.PrepareForPairing.SignalWarning" = "Singal only works for devices breathing cyan";
 
 
-
 "MeshSetup.ControlPanel.FlowComplete.AddNewWifi.Title" = "Success";
 "MeshSetup.ControlPanel.FlowComplete.AddNewWifi.Text" = "Wi-Fi credentials were successfully added to {{deviceName}}";
+
+
+
+
+
 
 
 "MeshSetup.SelectDevice.Title" = "Choose the device you’re setting up";
