add texts to sim activate/deactivate flow complete view

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -94,7 +94,9 @@
 "MeshSetup.ControlPanel.FlowComplete.ToggleEthernet.ActivateText" = "Ethernet pins activated";
 "MeshSetup.ControlPanel.FlowComplete.ToggleEthernet.DeactivateText" = "Ethernet pins deactivated";
 
-
+"MeshSetup.ControlPanel.FlowComplete.ToggleSim.Title" = "Success";
+"MeshSetup.ControlPanel.FlowComplete.ToggleSim.ActivateText" = "SIM activated";
+"MeshSetup.ControlPanel.FlowComplete.ToggleSim.DeactivateText" = "SIM deactivated";
 
 
 
