--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -57,6 +57,12 @@
 "MeshSetup.ControlPanel.Cellular.ChangeDataLimit" = "Data Limit";
 
 
+"MeshSetup.ControlPanel.Cellular.DataLimit.Title" = "Set Data Limit";
+"MeshSetup.ControlPanel.Cellular.DataLimit.Text" = "Service will be paused once your SIM has reached the data limit below:";
+"MeshSetup.ControlPanel.Cellular.DataLimit.DataLimitValue" = "{{0}}MB";
+"MeshSetup.ControlPanel.Cellular.DataLimit.ContinueButton" = "Set Data Limit";
+
+
 "MeshSetup.ControlPanel.Ethernet.Title" = "Ethernet";
 "MeshSetup.ControlPanel.Ethernet.ActivateEthernet" = "Ethernet Pins";
 "MeshSetup.ControlPanel.Ethernet.DeactivateEthernet" = "Ethernet Pins";
@@ -89,6 +95,8 @@
 "MeshSetup.ControlPanel.FlowComplete.AddNewWifi.Title" = "Success";
 "MeshSetup.ControlPanel.FlowComplete.AddNewWifi.Text" = "Wi-Fi credentials were successfully added to {{deviceName}}";
 
+"MeshSetup.ControlPanel.FlowComplete.ChangeDataLimit.Title" = "Success";
+"MeshSetup.ControlPanel.FlowComplete.ChangeDataLimit.Text" = "SIM data limit was changed";
 
 "MeshSetup.ControlPanel.FlowComplete.ToggleEthernet.Title" = "Success";
 "MeshSetup.ControlPanel.FlowComplete.ToggleEthernet.ActivateText" = "Ethernet pins activated";
