introduce logic for 3 sim states (paused, deactivated, active) and change how change sim status cell is rendered

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -62,12 +62,13 @@
 "MeshSetup.ControlPanel.Cellular.ChangeDataLimit" = "Monthly Data Limit";
 
 
-"MeshSetup.ControlPanel.Cellular.DataLimit.Title" = "Set Data Limit";
+"MeshSetup.ControlPanel.Cellular.DataLimit.Title" = "Monthly Data Limit";
 "MeshSetup.ControlPanel.Cellular.DataLimit.Text" = "Service will be paused once your SIM has reached the data limit below:";
 "MeshSetup.ControlPanel.Cellular.DataLimit.DataLimitValue" = "{{0}}MB";
 "MeshSetup.ControlPanel.Cellular.DataLimit.ContinueButton" = "Set Data Limit";
 "MeshSetup.ControlPanel.Cellular.Active" = "Active";
 "MeshSetup.ControlPanel.Cellular.Inactive" = "Deactivated";
+"MeshSetup.ControlPanel.Cellular.Paused" = "Paused";
 
 
 "MeshSetup.ControlPanel.Ethernet.Title" = "Ethernet";
