--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -78,10 +78,18 @@
 "MeshSetup.ControlPanel.Cellular.DataLimit.ContinueButton" = "Set Data Limit";
 
 "MeshSetup.ControlPanel.Cellular.DeactivateSim.Title" = "SIM Status";
-"MeshSetup.ControlPanel.Cellular.DeactivateSim.TextTitle" = "Deactivate SIM Card ";
+"MeshSetup.ControlPanel.Cellular.DeactivateSim.TextTitle" = "Deactivate SIM Card";
 "MeshSetup.ControlPanel.Cellular.DeactivateSim.Text" = "Are you sure that you want to deactivate data service of the SIM with an ICCID ending in ...{{iccid}}?\r\n\r\n\This will immediately stop {{device}} using this SIM from sending or receiving data via a cellular network, and will disrupt expected device behavior until an active SIM is used.";
 "MeshSetup.ControlPanel.Cellular.DeactivateSim.Note" = "Deactivation may take up to a few minutes. Please be patient.";
 "MeshSetup.ControlPanel.Cellular.DeactivateSim.ContinueButton" = "Deactivate SIM";
+
+"MeshSetup.ControlPanel.Cellular.ActivateSim.Title" = "SIM Status";
+"MeshSetup.ControlPanel.Cellular.ActivateSim.TextTitle" = "Reactivate SIM Card";
+"MeshSetup.ControlPanel.Cellular.ActivateSim.Text" = "We’re so glad you’d like to reactivate your Particle SIM with an ICCID ending in ...{{iccid}}. This will resume cellular data transfer and immediately allow devices using this SIM to connect to the Internet.\r\n\r\nAs a reminder, here are the cellular data usage pricing details for devices using this SIM:";
+"MeshSetup.ControlPanel.Cellular.ActivateSim.Note" = "Reactivation may take up to a few minutes. Please be patient.";
+"MeshSetup.ControlPanel.Cellular.ActivateSim.PriceInfo1" = "3MB included/mo.";
+"MeshSetup.ControlPanel.Cellular.ActivateSim.PriceInfo2" = "$0.40+ additional MBs";
+"MeshSetup.ControlPanel.Cellular.ActivateSim.ContinueButton" = "Reactivate SIM";
 
 
 "MeshSetup.ControlPanel.Ethernet.Title" = "Ethernet";
