update copyright in strings file

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -3,7 +3,7 @@
   Particle
 
   Created by Raimundas Sakalauskas on 18/09/2018.
-  Copyright © 2018 spark. All rights reserved.
+  Copyright © 2018 Particle. All rights reserved.
 */
 
 "MeshSetup.Prompt.ErrorTitle" = "Error";
