add name and notes buttons to control panel root

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -105,6 +105,8 @@
 "MeshSetup.Default.DeviceType" = "device";
 
 "MeshSetup.ControlPanel.Root.Title" = "Control Panel";
+"MeshSetup.ControlPanel.Root.Name" = "Device Name";
+"MeshSetup.ControlPanel.Root.Notes" = "Notes";
 "MeshSetup.ControlPanel.Root.Wifi" = "Wi-Fi";
 "MeshSetup.ControlPanel.Root.Mesh" = "Mesh";
 "MeshSetup.ControlPanel.Root.Ethernet" = "Ethernet";
